# rust-html-gui

./: Cargo.toml  main.gui
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
gui/: main.gui  project.gui
src/: application.rs  consts.rs  format.rs  lib.rs  loader.rs  main.rs
src/element/: attributes.rs  container_direction.rs  container_expand.rs  mod.rs  prepared_element.rs  processed_element.rs  renderable_element.rs
src/math/: bounding_box.rs  mod.rs  size.rs
src/render/: format.rs  mod.rs  renderable.rs  size.rs
src/traits/: form_nodes.rs  into_elements.rs  mod.rs
