[package]
name = "rust-html-gui"
version = "0.1.0"
edition = "2021"
authors = ["Mathys Gasnier <mathys35.gasnier@gmail.com>"]
description = "A rust gui library"
repository = "https://github.com/Mathys-Gasnier/rust-html-gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html_parser = "0.7.0"
once_cell = "1.19.0"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

[dependencies.raylib]
version = "5.0.0"
git = "https://github.com/raylib-rs/raylib-rs"
branch = "master"
